# FastAPIOrganization

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  init-test-db.sh  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: d1cfd4da6701_initial_migration.py
app/: config.py  database.py  exceptions.py  main.py
app/api/: deps.py
app/api/routes/: __init.py  departments.py  departments_router.py  employees.py
app/models/: __init__.py  department.py  employee.py
app/repositories/: __init__.py  base.py  department.py  employee.py
app/schemas/: __init__.py  department.py  employee.py
app/services/: __init__.py  department.py  employee.py
tests/: conftest.py  database.py  test_department.py
